[package]
name = "raytracing-in-one-weekend"
version = "0.1.0"
authors = ["Dries Cruyskens <dries.cruyskens@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vec3 = { path = "vec3" }
ray = { path = "ray" }
image = "0.23.6"

[workspace]
members = [
    "first-image",
    "first-image-png",
    "vec3",
    "ray",
]