[package]
name = "raytracing-in-one-weekend"
version = "0.1.0"
authors = ["Dries Cruyskens <dries.cruyskens@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vec3 = { path = "vec3" }
rt = { path = "rt" }
image = "0.23.6"
rand = "0.7.3"

[workspace]
members = [
    "vec3",
    "rt",
]